# fifteen-competing-standards

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/fcs/: __init__.py
