[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifteen-competing-standards"   # pip install name
version = "0.0.1a"
description = "High-level bindings and algorithm implementations to decisively solve AI/ML/DL problems "
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "YOUR_NAME" }]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]
torch = [
  "torch>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fcs = ["py.typed", "**/*.yaml", "**/*.json", "**/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
extend-exclude = [
  "build",
  "dist",
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  "**/__pycache__",
  "docs/_build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "E", "W", "F",        # core correctness
  "I",                  # imports
  "B",                  # bugbear
  "UP",                 # pyupgrade
  "SIM", "C4",          # simplifications/comprehensions
  "A",                  # builtins shadowing
  "RUF",                # ruff-specific
  "N",                  # naming
  "S",                  # security-ish
  "T20",                # print
  "DTZ",                # timezone-aware datetimes
  "NPY",                # numpy-specific
  "PERF",               # perf traps (optional)
]
ignore = [
  "E501",               # let the formatter handle line length
  "S101",               # allow assert (useful in tests; harmless in libs)
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["fcs"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "T201", "N802", "N803", "N806"]
"examples/**" = ["T201", "S101"]
"scripts/**" = ["T201"]
"**/__init__.py" = ["F401"] # re-export patterns

# If you enable docstrings ("D"), add:
# "tests/**" = ["D"]
# "**/__init__.py" = ["D104"]
# "**/_*.py" = ["D"]
